# ffmpeg_qt_player

./: .gitignore  AudioPlayer.h  CMakeLists.txt  FFmpegExamples.cpp  FileDecode.cpp  FileDecode.h  ImageYuvRender.cpp  ImageYuvRender.h  JitterBuffer.h  MyQtMainWindow.cpp  MyQtMainWindow.h  README.md  SwrResample.cpp  SwrResample.h  chooseurl.ui  push.sh
player/: CMakeLists.txt  DecoderManager.cpp  DecoderManager.h  Demuxer.cpp  Demuxer.h  FFmpegWrapper.h  MainWindow.cpp  MainWindow.h  PlayerController.cpp  PlayerController.h  PlayerWidget.cpp  PlayerWidget.h  SystemClock.cpp  main.cpp
tests/: CMakeLists.txt  audiodecode.cpp  audioresample.cpp  play.sh  videodecode.cpp
